# orchids-challenge

./: .gitignore  README.md
backend/: env.example  pyproject.toml
backend/app/: main.py
backend/app/agents/: __init__.py  base_agent.py
backend/app/agents/react_agent/: nodes.py
backend/app/agents/utils/: get_numbered_code_from_file.py  playwright_screenshot.py
backend/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: package-lock.json  package.json
frontend/public/: page copy.html  page.css  page.html
frontend/src/app/: globals.css  page.tsx
